[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

git2 = "^0.14"
anyhow = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
itertools = "0.10.3"
rayon = "1"
venial = "0.4.0"
bumpalo = { version = "3", features = ["collections"] }
